[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/dialogue_nodes/editor/editor.gd" type="Script" id=1]
[ext_resource path="res://addons/dialogue_nodes/editor/graph.gd" type="Script" id=2]
[ext_resource path="res://addons/dialogue_nodes/icons/Back.svg" type="Texture" id=3]
[ext_resource path="res://addons/dialogue_nodes/icons/Forward.svg" type="Texture" id=4]
[ext_resource path="res://addons/dialogue_nodes/objects/dialogueBox.gd" type="Script" id=5]
[ext_resource path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" type="Script" id=6]
[ext_resource path="res://addons/dialogue_nodes/editor/workspace.gd" type="Script" id=7]
[ext_resource path="res://addons/dialogue_nodes/icons/Reload.svg" type="Texture" id=8]
[ext_resource path="res://addons/dialogue_nodes/editor/files.gd" type="Script" id=9]
[ext_resource path="res://addons/dialogue_nodes/editor/variables.gd" type="Script" id=10]
[ext_resource path="res://addons/dialogue_nodes/icons/Folder.svg" type="Texture" id=11]
[ext_resource path="res://addons/dialogue_nodes/editor/characters.gd" type="Script" id=12]

[sub_resource type="RichTextEffect" id=1]
script = ExtResource( 6 )

[node name="NodeEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 300 )
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolBar" type="HBoxContainer" parent="Main"]
margin_right = 1016.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileMenu" type="MenuButton" parent="Main/ToolBar"]
margin_right = 35.0
margin_bottom = 20.0
keep_pressed_outside = true
text = "File"
items = [ "New Tree", null, 0, false, false, 0, 0, null, "", false, "Open...", null, 0, false, false, 1, 0, null, "", false, "", null, 0, false, false, 6, 0, null, "", true, "Save", null, 0, false, false, 2, 0, null, "", false, "Save As", null, 0, false, false, 3, 0, null, "", false, "", null, 0, false, false, 7, 0, null, "", true, "Close", null, 0, false, false, 4, 0, null, "", false, "Close All", null, 0, false, false, 5, 0, null, "", false ]
switch_on_hover = true

[node name="AddMenu" type="MenuButton" parent="Main/ToolBar"]
visible = false
margin_left = 39.0
margin_right = 114.0
margin_bottom = 22.0
keep_pressed_outside = true
text = "Add Node"
items = [ "StartNode", null, 0, false, false, 0, 0, null, "", false, "DialogueNode", null, 0, false, false, 1, 0, null, "", false, "CommentNode", null, 0, false, false, 2, 0, null, "", false, "SignalNode", null, 0, false, false, 3, 0, null, "", false, "SetNode", null, 0, false, false, 4, 0, null, "", false, "ConditionNode", null, 0, false, false, 5, 0, null, "", false ]
switch_on_hover = true

[node name="RunMenu" type="MenuButton" parent="Main/ToolBar"]
visible = false
margin_left = 118.0
margin_right = 154.0
margin_bottom = 22.0
keep_pressed_outside = true
text = "Run"
switch_on_hover = true

[node name="DebugMenu" type="MenuButton" parent="Main/ToolBar"]
margin_left = 39.0
margin_right = 92.0
margin_bottom = 20.0
focus_mode = 2
keep_pressed_outside = true
text = "Debug"
items = [ "Print Debug Messages", null, 1, false, false, 0, 0, null, "", false ]
switch_on_hover = true

[node name="Workspace" type="HSplitContainer" parent="Main"]
margin_top = 24.0
margin_right = 1016.0
margin_bottom = 576.0
size_flags_vertical = 3
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
nodeScenes = [ "res://addons/dialogue_nodes/nodes/StartNode.tscn", "res://addons/dialogue_nodes/nodes/DialogueNode.tscn", "res://addons/dialogue_nodes/nodes/CommentNode.tscn", "res://addons/dialogue_nodes/nodes/SignalNode.tscn", "res://addons/dialogue_nodes/nodes/SetNode.tscn", "res://addons/dialogue_nodes/nodes/ConditionNode.tscn" ]

[node name="SidePanel" type="VSplitContainer" parent="Main/Workspace"]
margin_right = 1016.0
margin_bottom = 552.0
rect_min_size = Vector2( 150, 0 )
rect_clip_content = true

[node name="Files" type="ItemList" parent="Main/Workspace/SidePanel"]
margin_right = 1016.0
margin_bottom = 552.0
size_flags_vertical = 3
allow_rmb_select = true
script = ExtResource( 9 )
editor_path = NodePath("../../../..")
newDialogue_path = NodePath("../../../../NewDialog")
saveDialogue_path = NodePath("../../../../SaveDialog")
openDialogue_path = NodePath("../../../../OpenDialog")
confirmDialogue_path = NodePath("../../../../ConfirmationDialog")

[node name="PopupMenu" type="PopupMenu" parent="Main/Workspace/SidePanel/Files"]
margin_right = 20.0
margin_bottom = 20.0
items = [ "Save", null, 0, false, false, 0, 0, null, "", false, "Save As", null, 0, false, false, 1, 0, null, "", false, "Close", null, 0, false, false, 2, 0, null, "", false, "Close All", null, 0, false, false, 3, 0, null, "", false ]
allow_search = true

[node name="Data" type="VBoxContainer" parent="Main/Workspace/SidePanel"]
visible = false
margin_top = 282.0
margin_right = 1016.0
margin_bottom = 552.0
size_flags_vertical = 3

[node name="Characters" type="VBoxContainer" parent="Main/Workspace/SidePanel/Data"]
margin_right = 1016.0
margin_bottom = 50.0
script = ExtResource( 12 )
openDialog_path = NodePath("../../../../../OpenCharacterDialog")

[node name="Title" type="Label" parent="Main/Workspace/SidePanel/Data/Characters"]
margin_right = 1016.0
margin_bottom = 14.0
text = "Characters"

[node name="HBoxContainer" type="HBoxContainer" parent="Main/Workspace/SidePanel/Data/Characters"]
margin_top = 18.0
margin_right = 1016.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 32 )

[node name="ResetButton" type="Button" parent="Main/Workspace/SidePanel/Data/Characters/HBoxContainer"]
visible = false
margin_right = 28.0
margin_bottom = 22.0
icon = ExtResource( 8 )
flat = true

[node name="FilePath" type="TextEdit" parent="Main/Workspace/SidePanel/Data/Characters/HBoxContainer"]
margin_right = 984.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="LoadButton" type="Button" parent="Main/Workspace/SidePanel/Data/Characters/HBoxContainer"]
margin_left = 988.0
margin_right = 1016.0
margin_bottom = 32.0
icon = ExtResource( 11 )

[node name="Variables" type="VBoxContainer" parent="Main/Workspace/SidePanel/Data"]
margin_top = 54.0
margin_right = 1016.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 10 )

[node name="Title" type="Label" parent="Main/Workspace/SidePanel/Data/Variables"]
margin_right = 1016.0
margin_bottom = 14.0
text = "Variables"

[node name="AddButton" type="Button" parent="Main/Workspace/SidePanel/Data/Variables"]
margin_top = 18.0
margin_right = 1016.0
margin_bottom = 38.0
hint_tooltip = "Add a new variable."
text = "+"

[node name="ScrollContainer" type="ScrollContainer" parent="Main/Workspace/SidePanel/Data/Variables"]
margin_top = 42.0
margin_right = 1016.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Main/Workspace/SidePanel/Data/Variables/ScrollContainer"]
margin_right = 1016.0
size_flags_horizontal = 3

[node name="Graph" type="GraphEdit" parent="Main/Workspace"]
visible = false
margin_left = 162.0
margin_right = 1016.0
margin_bottom = 552.0
rect_min_size = Vector2( 400, 0 )
size_flags_vertical = 3
right_disconnects = true
scroll_offset = Vector2( -208, -2 )
zoom_min = 0.5
zoom_max = 2.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="Main/Workspace/Graph"]
margin_right = 16.0
margin_bottom = 16.0
items = [ "StartNode", null, 0, false, false, 0, 0, null, "", false, "DialogueNode", null, 0, false, false, 1, 0, null, "", false, "CommentNode", null, 0, false, false, 2, 0, null, "", false, "SignalNode", null, 0, false, false, 3, 0, null, "", false, "SetNode", null, 0, false, false, 4, 0, null, "", false, "ConditionNode", null, 0, false, false, 5, 0, null, "", false ]
allow_search = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Statusbar" type="HBoxContainer" parent="Main"]
margin_top = 580.0
margin_right = 1016.0
margin_bottom = 600.0

[node name="PanelToggle" type="TextureButton" parent="Main/Statusbar"]
margin_right = 30.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 20 )
toggle_mode = true
pressed = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="NewDialog" type="FileDialog" parent="."]
margin_left = 200.0
margin_top = 200.0
margin_right = 700.0
margin_bottom = 600.0
rect_min_size = Vector2( 400, 300 )
rect_pivot_offset = Vector2( 200, 150 )
window_title = "Create New Dialogue Tree"
resizable = true
mode_overrides_title = false
filters = PoolStringArray( "*.tres; DialogueData File" )

[node name="SaveDialog" type="FileDialog" parent="."]
margin_left = 200.0
margin_top = 200.0
margin_right = 700.0
margin_bottom = 600.0
rect_min_size = Vector2( 400, 300 )
rect_pivot_offset = Vector2( 200, 150 )
window_title = "Save Dialogue Tree"
resizable = true
mode_overrides_title = false
filters = PoolStringArray( "*.tres; Dialogue Data File" )

[node name="OpenDialog" type="FileDialog" parent="."]
margin_left = 200.0
margin_top = 200.0
margin_right = 700.0
margin_bottom = 600.0
rect_min_size = Vector2( 400, 300 )
rect_pivot_offset = Vector2( 200, 150 )
window_title = "Open Dialogue Tree"
resizable = true
mode_overrides_title = false
mode = 0
filters = PoolStringArray( "*.tres; Dialogue Data File" )

[node name="ConfirmationDialog" type="AcceptDialog" parent="."]
margin_right = 280.0
margin_bottom = 90.0
rect_min_size = Vector2( 280, 90 )
popup_exclusive = true
window_title = "Unsaved changes!"
dialog_text = "The file/s contains unsaved changes. Are you sure you want to close the file/s?"
dialog_autowrap = true

[node name="OpenCharacterDialog" type="FileDialog" parent="."]
margin_left = 200.0
margin_top = 200.0
margin_right = 700.0
margin_bottom = 600.0
rect_min_size = Vector2( 400, 400 )
window_title = "Open a File"
resizable = true
mode = 0
filters = PoolStringArray( "*.tres; CharacterList Resource" )

[node name="DialogueBox" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -335.0
margin_top = -105.5
margin_right = 335.0
margin_bottom = 105.5
rect_min_size = Vector2( 300, 72 )
script = ExtResource( 5 )
custom_effects = [ SubResource( 1 ) ]

[connection signal="about_to_show" from="Main/ToolBar/RunMenu" to="." method="_update_run_menu"]
[connection signal="node_added" from="Main/Workspace" to="." method="_on_node_added"]
[connection signal="node_deleted" from="Main/Workspace" to="." method="_on_node_deleted"]
[connection signal="closed" from="Main/Workspace/SidePanel/Files" to="." method="_on_file_closed"]
[connection signal="closed" from="Main/Workspace/SidePanel/Files" to="Main/Workspace" method="_on_file_closed"]
[connection signal="item_rmb_selected" from="Main/Workspace/SidePanel/Files" to="Main/Workspace/SidePanel/Files" method="_on_rmb_selected"]
[connection signal="item_selected" from="Main/Workspace/SidePanel/Files" to="Main/Workspace/SidePanel/Files" method="select_file"]
[connection signal="opened" from="Main/Workspace/SidePanel/Files" to="." method="_on_file_opened"]
[connection signal="rmb_clicked" from="Main/Workspace/SidePanel/Files" to="Main/Workspace/SidePanel/Files" method="_on_rmb_clicked"]
[connection signal="switched" from="Main/Workspace/SidePanel/Files" to="." method="open_data"]
[connection signal="id_pressed" from="Main/Workspace/SidePanel/Files/PopupMenu" to="." method="_on_file_popup_pressed"]
[connection signal="pressed" from="Main/Workspace/SidePanel/Data/Characters/HBoxContainer/ResetButton" to="Main/Workspace/SidePanel/Data/Characters" method="_on_resetButton_pressed"]
[connection signal="text_changed" from="Main/Workspace/SidePanel/Data/Characters/HBoxContainer/FilePath" to="Main/Workspace/SidePanel/Data/Characters" method="_on_filePath_changed"]
[connection signal="pressed" from="Main/Workspace/SidePanel/Data/Characters/HBoxContainer/LoadButton" to="Main/Workspace/SidePanel/Data/Characters" method="_on_loadButton_pressed"]
[connection signal="modified" from="Main/Workspace/SidePanel/Data/Variables" to="Main/Workspace" method="_on_file_modified"]
[connection signal="pressed" from="Main/Workspace/SidePanel/Data/Variables/AddButton" to="Main/Workspace/SidePanel/Data/Variables" method="add_variable"]
[connection signal="_end_node_move" from="Main/Workspace/Graph" to="Main/Workspace/Graph" method="_on_modified"]
[connection signal="connection_request" from="Main/Workspace/Graph" to="Main/Workspace" method="_on_connection_request"]
[connection signal="connection_request" from="Main/Workspace/Graph" to="Main/Workspace/Graph" method="_on_modified"]
[connection signal="connection_to_empty" from="Main/Workspace/Graph" to="Main/Workspace" method="_on_connection_to_empty"]
[connection signal="delete_nodes_request" from="Main/Workspace/Graph" to="Main/Workspace" method="_on_nodes_delete"]
[connection signal="delete_nodes_request" from="Main/Workspace/Graph" to="Main/Workspace/Graph" method="_on_modified"]
[connection signal="disconnection_request" from="Main/Workspace/Graph" to="Main/Workspace" method="_on_disconnection_request"]
[connection signal="disconnection_request" from="Main/Workspace/Graph" to="Main/Workspace/Graph" method="_on_modified"]
[connection signal="duplicate_nodes_request" from="Main/Workspace/Graph" to="Main/Workspace" method="_on_nodes_duplicated"]
[connection signal="duplicate_nodes_request" from="Main/Workspace/Graph" to="Main/Workspace/Graph" method="_on_modified"]
[connection signal="modified" from="Main/Workspace/Graph" to="Main/Workspace" method="_on_file_modified"]
[connection signal="popup_request" from="Main/Workspace/Graph" to="Main/Workspace" method="show_menu"]
[connection signal="visibility_changed" from="Main/Workspace/Graph" to="." method="_on_graph_visibility_changed"]
[connection signal="id_pressed" from="Main/Workspace/Graph/PopupMenu" to="Main/Workspace" method="add_node"]
[connection signal="pressed" from="Main/Statusbar/PanelToggle" to="." method="toggle_side_panel"]
[connection signal="file_selected" from="NewDialog" to="." method="new_file"]
[connection signal="file_selected" from="SaveDialog" to="." method="save_file"]
[connection signal="file_selected" from="OpenDialog" to="." method="open_file"]
[connection signal="custom_action" from="ConfirmationDialog" to="Main/Workspace/SidePanel/Files" method="_on_confirmDialog_action"]
[connection signal="popup_hide" from="ConfirmationDialog" to="Main/Workspace/SidePanel/Files" method="_on_confirmDialog_hide"]
[connection signal="file_selected" from="OpenCharacterDialog" to="Main/Workspace/SidePanel/Data/Characters" method="load_file"]
[connection signal="dialogue_ended" from="DialogueBox" to="." method="_on_dialogue_ended"]
[connection signal="dialogue_signal" from="DialogueBox" to="." method="_on_dialogue_signal"]
[connection signal="dialogue_started" from="DialogueBox" to="." method="_on_dialogue_started"]
[connection signal="popup_hide" from="DialogueBox" to="." method="_on_dialogue_cancelled"]
[connection signal="variable_changed" from="DialogueBox" to="." method="_on_dialogue_variable_changed"]
